@@ -1,1 +1,1 @@
-4.0.0beta6
+4.0.0beta7
