@@ -65,25 +65,21 @@
     in several different formats.
   </p>
   <p>
-    Included in this software distribution is a library, libtiff, for reading
-    and writing TIFF, a small collection of tools for doing simple
-    manipulations of TIFF images, and documentation on the
-    library and tools.  Libtiff is a portable software, it was built and
-    tested on various systems: UNIX flavors (Linux, BSD, Solaris, MacOS X),
-    Windows, OpenVMS.  It should be possible to port libtiff and additional
-    tools on other OSes.
+    Included in this software distribution is a library, libtiff, for
+    reading and writing TIFF, a small collection of tools for doing
+    simple manipulations of TIFF images, and documentation on the
+    library and tools.  Libtiff is a portable software, it was built
+    and tested on various systems: UNIX flavors (Linux, BSD, Solaris,
+    MacOS X), Windows, and OpenVMS.  It should be possible to port
+    libtiff and additional tools on other OSes.
   </p>
   <p>
     The library, along with associated tool programs, should handle most of
     your needs for reading and writing TIFF images on 32- and 64-bit
-    machines.  This software can also be used on older 16-bit systems
-    though it may require some effort and you may need to leave out some of
-    the compression support.
+    machines.
   </p>
   <p>
     The software was originally authored and maintained by Sam Leffler.
-    While he keeps a fatherly eye on the mailing list, he is no longer
-    responsible for day to day maintenance.
   </p>
   <p>
     Questions should be sent to the TIFF mailing list:
@@ -125,7 +121,7 @@
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2011-04-09 20:21:27 $.
+    Last updated  $Date: 2011-04-09 21:01:00 $.
   </p>
 </body>
 </html>
